--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -50,9 +50,9 @@ body {
   color: #222;
   background-color: #fff;
 }
-::selection {
+/* ::selection {
   background-color: rgba(0, 0, 0, 0.075);
-}
+} */
 
 .app-container {
   display: flex;
@@ -80,15 +80,18 @@ body {
 .app-container .meta .topbar > .misc-buttons button {
   margin-left: 0.5rem;
 }
+.app-container .meta .topbar > .misc-buttons button:disabled {
+  opacity: 0.5;
+}
 .app-container .meta .topbar > .query-input {
   margin: 0;
-  height: 2.5rem;
+  height: 2.4rem;
   transition: border-color 0.2s, box-shadow 0.2s, border-radius 0.2s, background-color 0.2s;
   border: 1px solid transparent;
   padding: 0 0.75rem;
   outline: none;
   box-sizing: border-box;
-  font-size: 0.95rem;
+  font-size: 1rem;
   flex-shrink: 1;
   flex-basis: 100%;
   margin-left: 1rem;
@@ -106,22 +109,10 @@ body {
   background-color: #fff;
   border-radius: 4px;
 }
-.app-container .meta .topbar > .query-input * {
-  margin: 0;
-}
-.app-container .meta .topbar > .query-input button {
-  position: absolute;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-.app-container .meta .topbar > .query-input .input-field {
-  width: 100%;
-}
 
 .app-container .meta .tabs-container {
   display: flex;
-  height: 2.75rem;
+  height: 2.5rem;
   align-items: center;
   background-color: #dde3e6;
   width: 100%;
@@ -169,6 +160,7 @@ body {
   overflow-x: hidden;
   border-right: 1px solid transparent;
   border-left: 1px solid transparent;
+  overflow-y: hidden;
 }
 @keyframes enter-in {
   0% {
@@ -252,4 +244,23 @@ body {
 }
 .app-container .meta .tabs-container ul.all-tabs li button.delete-tab:not(:hover) {
   background-color: transparent !important;
+}
+
+.app-container .webviews {
+  flex-basis: 100%;
+  flex-shrink: 1;
+}
+.app-container .webviews webview {
+  height: 100%;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.app-container .webviews webview object {
+  width: 100%;
+  height: 100%;
+}
+
+.app-container .webviews webview:not([active='true']) {
+  display: none;
 }
